--- a/test/dune
+++ b/test/dune
@@ -1,8 +1,11 @@
+
+; !!!! This dune file is generated from the package.json file by pesy. If you modify it by hand
+; !!!! your changes will be undone! Instead, edit the package.json and then rerun 'esy pesy' at the project root.
+; !!!! If you want to stop using pesy and manage this file by hand, change pacakge.json's 'esy.build' command to: refmterr dune build -p  @decent-algorithms/reason-examples
 (executable
-   ; !!!! This dune file is generated from the package.json file. Do NOT modify by hand.
-   ; !!!! Instead, edit the package.json and then rerun 'esy pesy' at the project root.
    ; The entrypoint module
    (name Test)  ;  From package.json main field
+   ; The name of the executable (runnable via esy x Test.exe) 
    (public_name Test.exe)  ;  From package.json name field
    (libraries  reason-examples.lib ) ;  From package.json require field (array of strings)
-  )
+)
